Fixed the package description

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ctrl-dir-scroll",
   "main": "./lib/ctrl-dir-scroll",
   "version": "0.1.0",
-  "description": "A short description of your package",
+  "description": "Imitates the Ctrl+Up/Down behaviour from Sublime text",
   "activationEvents": [
     "ctrl-dir-scroll:scroll-up",
     "ctrl-dir-scroll:scroll-down"
