--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Control-Scroll",
+  "name": "ctrl-dir-scroll",
   "main": "./lib/ctrl-dir-scroll",
   "version": "0.1.1",
   "description": "Imitates the Line Up/Down behaviour from Sublime text",
