--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "main": "./lib/ctrl-dir-scroll",
   "version": "0.1.8",
   "description": "Imitates the Line Up/Down behaviour from Sublime text",
-  "activationEvents": [
-    "ctrl-dir-scroll:scroll-up",
-    "ctrl-dir-scroll:scroll-down"
-  ],
+  "activationCommands": {
+    "atom-text-editor": [
+      "ctrl-dir-scroll:scroll-up",
+      "ctrl-dir-scroll:scroll-down"
+    ]
+  },
   "repository": "https://github.com/callum-ramage/ctrl-dir-scroll",
   "license": "MIT",
   "engines": {
